--- a/src/containers/AppContainer/components/Dashboard/dashboardstyles.css
+++ b/src/containers/AppContainer/components/Dashboard/dashboardstyles.css
@@ -1,3 +1,7 @@
+.html {
+  width: 980px;
+  height: 2301.5;
+}
 .parent {
   display: flex;
   flex-wrap: wrap;
@@ -13,7 +17,7 @@
 }
 .right1 {
   width: 85%;
-  background-color: black;
+  /* background-color: black; */
   display: flex;
   flex-direction: column;
 }
@@ -22,13 +26,13 @@
   display: flex;
   justify-content: space-between;
   background-color: white;
+  justify-content: center;
   /* border: 1px solid red; */
 }
 .main {
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
-  background-color: black;
 }
 .mainup {
   display: flex;
@@ -36,6 +40,17 @@
   flex-direction: row;
   justify-content: space-around;
   margin-top: 20px;
+}
+.mainuplink {
+  height: 263px;
+  background-color: blue;
+  border-radius: 12px;
+}
+h3 {
+  color: white;
+  padding-left: 20px;
+  margin-bottom: 0px;
+  margin-top: 0px;
 }
 .maindown {
   display: flex;
@@ -53,7 +68,7 @@
 .sidenav1 {
   display: flex;
   flex-wrap: wrap;
-  margin-left: 50px;
+  justify-content: center;
   color: black;
 }
 
@@ -76,33 +91,67 @@ h2 {
   margin-top: 10px;
   line-height: 2;
 }
-td {
+/* .tdforroute {
   cursor: pointer;
-}
+  padding: 20px;
+} */
 .nounderline {
   text-decoration: none;
+  cursor: pointer;
+  padding: 20px;
 }
-.nounderline {
+.underline {
   text-decoration: underline;
-  /* text-decoration-color: blue; */
-  /* text-decoration-thickness: 5px; */
+  text-decoration-color: blue;
+  cursor: pointer;
+  padding: 20px;
+  /* text-decoration-thickness: 5px;
   padding-bottom: 15px;
   /* border-bottom-style: solid;
   /* border-bottom-width: 3.1px; */
   border-bottom-width: 3.1px;
   width: fit-content;
 }
-/* .button4 {
-  background-color: #04aa6d; 
-  border: none;
+.movelinkimageright {
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  margin-top: 20px;
+}
+.rounded {
+  border: 1px solid #ccc;
+  -moz-border-radius: 10px;
+  -webkit-border-radius: 10px;
+  border-radius: 10px;
+  -moz-box-shadow: 2px 2px 3px #666;
+  -webkit-box-shadow: 2px 2px 3px #666;
+  box-shadow: 2px 2px 3px #666;
+  font-size: 20px;
+  padding: 4px 7px;
+  outline: 0;
+  -webkit-appearance: none;
+  width: 50vw;
+  margin-left: 20px;
+}
+.shortrounded {
+  border: 1px solid #ccc;
+  -moz-border-radius: 10px;
+  -webkit-border-radius: 10px;
+  border-radius: 10px;
+  -moz-box-shadow: 2px 2px 3px #666;
+  -webkit-box-shadow: 2px 2px 3px #666;
+  box-shadow: 2px 2px 3px #666;
+  font-size: 20px;
+  padding: 4px 7px;
+  outline: 0;
+  -webkit-appearance: none;
+  /* width: 50vw; */
+  margin-left: 20px;
+}
+.white {
   color: white;
-  padding: 20px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  cursor: pointer;
-  border-radius: 12px;
-  box-shadow: none;
-} */
+  padding-left: 20px;
+}
+.tdForQuickLink {
+  height: 30px;
+}
