--- a/src/containers/AppContainer/components/sharedcomponents/styles.css
+++ b/src/containers/AppContainer/components/sharedcomponents/styles.css
@@ -1,7 +1,7 @@
 .boxform {
   /* margin: 0 auto; */
   width: 100%;
-  /* height: 100vh; */
+  height: 100vh;
   background: #ffffff;
   /* border-radius: 10px; */
   overflow: hidden;
@@ -11,32 +11,54 @@
   justify-content: center;
   /* box-shadow: 0 0 20px 6px #090b6f85; */
 }
-@media (max-width: 980px) {
+@media (max-width: 480px) {
   .boxform {
     flex-flow: wrap;
     text-align: center;
     align-content: center;
     align-items: center;
   }
+  .img {
+    width: 220px;
+    padding-top: 20px;
+  }
 }
-.boxform div {
+/* .boxform div {
   height: auto;
-}
-@media (max-width: 980px) {
+} */
+/* @media (max-width: 980px) {
   .right {
     width: 100%;
     padding-top: 0px;
   }
-}
-.img {
-  width: 400px;
-  height: 550px;
-  padding-left: 20px;
-  padding-top: 20px;
-  padding-right: 20px;
+} */
+@media (min-width: 480px) {
+  .img {
+    /* width: 400px;
+    height: 550px; */
+    padding-left: 20px;
+    padding-top: 20px;
+    padding-right: 20px;
+  }
+  .overlay {
+    height: 100vh;
+  }
+  /* h5 {
+    display: block;
+    font-size: 0.83em;
+    margin-block-start: 1.67em;
+    margin-block-end: 1.67em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: bold;
+    font-size: 6vmax;
+    /* line-height: 0;*/
+  /* margin-bottom: 0px;
+    margin-top: 150px;
+  } */
 }
 
-@media (max-width: 480px) {
+/* @media (max-width: 480px) {
   .img {
     width: 220px;
     height: 220px;
@@ -44,17 +66,17 @@
     padding-top: 20px;
     padding-right: 20px;
   }
-}
-@media (min-width: 1200px) {
+} */
+/* @media (min-width: 1200px) {
   .img {
     width: 842px;
     height: 768px;
   }
-}
-.boxform .right h5 {
+} */
+/* .boxform .right h5 {
   font-size: 6vmax;
   line-height: 0;
-}
+} */
 .boxform .right p {
   font-size: 14px;
   color: #b0b3b9;
@@ -62,17 +84,27 @@
 
 .left {
   color: #ffffff;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 .overlay {
   /* padding: 30px; */
   width: 100%;
-  height: 100%;
+  display: flex;
+
+  align-items: center;
+  /* height: 100vh; */
   /* background: #5961f9ad; */
   overflow: hidden;
   box-sizing: border-box;
 }
 .right {
+  /* padding: 40px;
+  padding-top: 0px;
+  overflow: hidden; */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   padding: 40px;
   padding-top: 0px;
   overflow: hidden;
@@ -105,7 +137,7 @@ p {
   margin-inline-start: 0px;
   margin-inline-end: 0px;
 }
-h5 {
+/* h5 {
   display: block;
   font-size: 0.83em;
   margin-block-start: 1.67em;
@@ -114,9 +146,9 @@ h5 {
   margin-inline-end: 0px;
   font-weight: bold;
   font-size: 6vmax;
-  line-height: 0;
-}
-input {
+  line-height: 0; 
+}*/
+.inputForAuth {
   width: 100%;
   padding: 10px;
   margin-top: 25px;
