--- a/src/containers/AppContainer/components/Dashboard/dashboardstyles.css
+++ b/src/containers/AppContainer/components/Dashboard/dashboardstyles.css
@@ -8,19 +8,30 @@
   justify-content: space-between;
   height: 100vh;
 }
+
 .left1 {
   width: 15%;
   display: flex;
   flex-direction: column;
   background-color: white;
+  display: none;
   /* border: 1px solid red; */
 }
+@media (min-width: 768px) {
+  .left1 {
+    display: block;
+  }
+  .right1 {
+    width: 85%;
+  }
+}
 .right1 {
-  width: 85%;
+  /* width: 85%; */
   /* background-color: black; */
   display: flex;
   flex-direction: column;
 }
+
 .header {
   height: 60px;
   display: flex;
@@ -29,6 +40,7 @@
   justify-content: center;
   /* border: 1px solid red; */
 }
+
 .main {
   display: flex;
   flex-wrap: wrap;
@@ -41,11 +53,13 @@
   justify-content: space-around;
   margin-top: 20px;
 }
+
 .mainuplink {
   height: 263px;
   background-color: blue;
   border-radius: 12px;
 }
+
 h3 {
   color: white;
   padding-left: 20px;
