--- a/src/components/sharedcomponents/styles.css
+++ b/src/components/sharedcomponents/styles.css
@@ -15,6 +15,12 @@ h4 {
   margin-bottom: 0px;
   margin-top: 0px;
 }
+@media (max-width: 800px) {
+  .img {
+    width: 400px;
+    padding-top: 70px;
+  }
+}
 @media (max-width: 480px) {
   .boxform {
     flex-flow: wrap;
@@ -27,15 +33,7 @@ h4 {
     padding-top: 70px;
   }
 }
-/* .boxform div {
-  height: auto;
-} */
-/* @media (max-width: 980px) {
-  .right {
-    width: 100%;
-    padding-top: 0px;
-  }
-} */
+
 @media (min-width: 480px) {
   .img {
     /* width: 400px;
@@ -47,40 +45,8 @@ h4 {
   .overlay {
     height: 100vh;
   }
-  /* h5 {
-    display: block;
-    font-size: 0.83em;
-    margin-block-start: 1.67em;
-    margin-block-end: 1.67em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    font-weight: bold;
-    font-size: 6vmax;
-    /* line-height: 0;*/
-  /* margin-bottom: 0px;
-    margin-top: 150px;
-  } */
 }
 
-/* @media (max-width: 480px) {
-  .img {
-    width: 220px;
-    height: 220px;
-    padding-left: 20px;
-    padding-top: 20px;
-    padding-right: 20px;
-  }
-} */
-/* @media (min-width: 1200px) {
-  .img {
-    width: 842px;
-    height: 768px;
-  }
-} */
-/* .boxform .right h5 {
-  font-size: 6vmax;
-  line-height: 0;
-} */
 .boxform .right p {
   font-size: 14px;
   color: #b0b3b9;
@@ -88,23 +54,15 @@ h4 {
 
 .left {
   color: #ffffff;
-  /* overflow: hidden; */
 }
 .overlay {
-  /* padding: 30px; */
   width: 100%;
   display: flex;
-
   align-items: center;
-  /* height: 100vh; */
-  /* background: #5961f9ad; */
   overflow: hidden;
   box-sizing: border-box;
 }
 .right {
-  /* padding: 40px;
-  padding-top: 0px;
-  overflow: hidden; */
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -117,13 +75,6 @@ h4 {
   overflow: hidden;
 }
 
-.hye {
-  font-size: 10vmax;
-  line-height: 1;
-  font-weight: 900;
-  margin-top: 40px;
-  margin-bottom: 20px;
-}
 h1 {
   display: block;
   font-size: 2em;
@@ -141,17 +92,7 @@ p {
   margin-inline-start: 0px;
   margin-inline-end: 0px;
 }
-/* h5 {
-  display: block;
-  font-size: 0.83em;
-  margin-block-start: 1.67em;
-  margin-block-end: 1.67em;
-  margin-inline-start: 0px;
-  margin-inline-end: 0px;
-  font-weight: bold;
-  font-size: 6vmax;
-  line-height: 0; 
-}*/
+
 .inputForAuth {
   width: 100%;
   /* padding: 10px; */
@@ -161,19 +102,7 @@ p {
   outline: none;
   border-bottom: 2px solid #b0b3b9;
 }
-/* button {
-    float: right;
-    cursor:pointer;
-    color: #fff;
-    font-size: 16px;
-    padding: 12px 35px;
-    border-radius: 50px;
-    display: inline-block;
-    border: 0;
-    outline: 0;
-    box-shadow: 0px 4px 20px 0px #2b28c6;
-    background-image: linear-gradient(135deg, #2b28c6 10%, #2b28c6 100%);
-} */
+
 button:disabled,
 button[disabled] {
   cursor: not-allowed;
@@ -201,7 +130,6 @@ button {
   border: 0;
   outline: 0;
   margin-bottom: 20px;
-  /* box-shadow: 0px 4px 20px 0px #2b28c6; */
   background-image: linear-gradient(135deg, #2b28c6 10%, #2b28c6 100%);
 }
 
@@ -209,15 +137,12 @@ button {
   border: 16px solid #f3f3f3;
   border-radius: 50%;
   border-top: 16px solid blue;
-  border-right: 16px solid green;
-  border-bottom: 16px solid red;
-  border-left: 16px solid pink;
-  width: 120px;
-  height: 120px;
+  width: 50px;
+  height: 50px;
   -webkit-animation: spin 2s linear infinite;
   animation: spin 2s linear infinite;
-  margin-top: 300px;
-  margin-bottom: 300px;
+  margin-top: 200px;
+
   margin-left: auto;
   margin-right: auto;
 }
