--- a/src/routes/Dashboard/popUpstyles.css
+++ b/src/routes/Dashboard/popUpstyles.css
@@ -33,6 +33,7 @@ button:hover {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.25);
+  bottom: 0px;
 }
 
 .modal_content {
@@ -71,4 +72,36 @@ a:active {
   text-decoration-color: blue;
   text-decoration-thickness: 5px;
   padding: 10px 0;
+}
+/* .sidemodal {
+  border: 1px solid black;
+  position: absolute;
+  /* top: 460px; */
+/* left: 80px;
+  padding: 10px;
+  padding-left: 5px;
+  height: 100px;
+  border-radius: 12px; 
+} */
+ul {
+  padding-left: 0px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  font-size: 14px;
+}
+.threedots {
+  height: 16px;
+}
+/* .sidemodalrelative {
+  position: relative;
+}
+.toggleSideRelative {
+  position: relative;
+} */
+.sidemodal {
+  margin-left: 40px;
+  border: 1px solid grey;
+  padding: 10px;
+  width: 100px;
+  border-radius: 12px;
 }
