--- a/src/routes/Dashboard/styles.css
+++ b/src/routes/Dashboard/styles.css
@@ -2,17 +2,55 @@
   width: 980px;
   height: 2301.5;
 }
+.noscrolling {
+  overflow: hidden;
+}
 .parent {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
+  /* flex-wrap: wrap; */
+  /* justify-content: space-between; */
   height: 100vh;
+}
+.top {
+  display: flex;
+  width: 100%;
+  height: 63px;
+  justify-content: center;
+  border-bottom: 1px solid grey;
+}
+.topdiv {
+  display: flex;
+  width: 33%;
+  justify-content: center;
+  align-items: center;
+}
+.topdiv0 {
+  display: flex;
+  width: 30%;
+  /* justify-content: space-around; */
+  align-items: center;
+  margin-left: 40px;
+}
+.topdiv1 {
+  display: flex;
+  width: 50%;
+  justify-content: space-around;
+  align-items: center;
+  padding-right: 20px;
+  padding-left: 20px;
+}
+.topdiv2 {
+  display: flex;
+  width: 20%;
+  justify-content: space-around;
+  align-items: center;
+  margin: 10px;
 }
 
 .left1 {
-  width: 15%;
   display: flex;
-  flex-direction: column;
+  width: 15%;
+  /* flex-direction: column; */
   background-color: white;
   display: none;
   /* border: 1px solid red; */
@@ -29,6 +67,7 @@
   /* width: 85%; */
   /* background-color: black; */
   display: flex;
+  width: 100%;
   flex-direction: column;
 }
 
@@ -47,17 +86,70 @@
   flex-direction: column;
 }
 .mainup {
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
-  justify-content: space-around;
-  margin-top: 20px;
+  /* display: flex; */
+  /* flex-wrap: wrap; */
+  /* justify-content: space-around; */
+  /* margin-top: 20px; */
+  margin: 30px;
 }
 
 .mainuplink {
+  display: flex;
   height: 263px;
   background-color: blue;
   border-radius: 12px;
+}
+.mainleft {
+  display: flex;
+  width: 70%;
+  background-color: blue;
+  height: 263px;
+  border-top-left-radius: 12px;
+  border-bottom-left-radius: 12px;
+}
+.mainright {
+  display: flex;
+  width: 30%;
+  justify-content: center;
+  align-items: center;
+  background-color: blue;
+  height: 263px;
+  border-top-right-radius: 12px;
+  border-bottom-right-radius: 12px;
+}
+@media (max-width: 800px) {
+  .movelinkimageright {
+    width: 200px;
+  }
+  .mainleft {
+    width: 50%;
+  }
+  .mainright {
+    width: 50%;
+  }
+}
+@media (max-width: 480px) {
+  .movelinkimageright {
+    width: 100px;
+  }
+  .mainleft {
+    width: 55%;
+  }
+  .mainright {
+    width: 45%;
+  }
+  .mainup {
+    margin: 10px;
+  }
+  .topdiv0 {
+    display: none;
+    margin-left: 40px;
+  }
+}
+@media (min-width: 480px) {
+  .topdiv {
+    display: none;
+  }
 }
 
 h3 {
@@ -105,26 +197,32 @@ h2 {
   margin-top: 10px;
   line-height: 2;
 }
-/* .tdforroute {
-  cursor: pointer;
-  padding: 20px;
-} */
 .nounderline {
+  /* display: flex;
+  width: 25%;
+  justify-content: center;
+  align-items: center; */
   text-decoration: none;
   cursor: pointer;
-  padding: 20px;
+  padding: 10px;
+  /* padding: 20px; */
 }
 .underline {
+  /* display: flex;
+  width: 25%;
+  justify-content: center;
+  align-items: center; */
   text-decoration: underline;
   text-decoration-color: blue;
   cursor: pointer;
-  padding: 20px;
+  /* padding: 20px; */
   /* text-decoration-thickness: 5px;
   padding-bottom: 15px;
   /* border-bottom-style: solid;
   /* border-bottom-width: 3.1px; */
   border-bottom-width: 3.1px;
   width: fit-content;
+  padding: 10px;
 }
 .movelinkimageright {
   display: flex;
@@ -168,4 +266,32 @@ h2 {
 }
 .tdForQuickLink {
   height: 30px;
+}
+/* select {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  text-indent: 1px;
+  text-overflow: "";
+} */
+.toggleSideRelative {
+  position: relative;
+}
+.modal1 {
+  display: flex;
+  position: relative;
+  flex-direction: column;
+}
+.modal11 {
+  width: 70%;
+}
+.modal12 {
+  width: 30%;
+  position: absolute;
+  border: 1px solid black;
+  top: 460px;
+  left: 80px;
+  padding: 10px;
+  padding-left: 5px;
+  height: 100px;
+  border-radius: 12px;
 }
