--- a/src/components/sharedcomponents/styles.css
+++ b/src/components/sharedcomponents/styles.css
@@ -1,15 +1,23 @@
 .boxform {
   /* margin: 0 auto; */
-  width: 100%;
-  height: 100vh;
-  background: #ffffff;
+  /* width: 100%;
+  height: 100vh; */
+  /* background: #ffffff; */
   /* border-radius: 10px; */
-  overflow: hidden;
+  /* overflow: hidden; */
   display: flex;
-  flex: 1 1 100%;
-  align-items: stretch;
+  /* flex: 1 1 100%;
+  align-items: stretch; */
   justify-content: center;
+  align-items: center;
   /* box-shadow: 0 0 20px 6px #090b6f85; */
+}
+a {
+  text-decoration: none;
+  color: blue;
+}
+a:active {
+  color: blue;
 }
 h4 {
   margin-bottom: 0px;
@@ -28,10 +36,10 @@ h4 {
     align-content: center;
     align-items: center;
   }
-  .img {
+  /* .img {
     width: 220px;
     padding-top: 70px;
-  }
+  } */
 }
 
 @media (min-width: 480px) {
@@ -54,6 +62,7 @@ h4 {
 
 .left {
   color: #ffffff;
+  width: 50%;
 }
 .overlay {
   width: 100%;
@@ -63,6 +72,7 @@ h4 {
   box-sizing: border-box;
 }
 .right {
+  width: 50%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -70,6 +80,11 @@ h4 {
   padding: 40px;
   padding-top: 0px;
   overflow: hidden;
+}
+.buttonclass {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .inputs {
   overflow: hidden;
@@ -134,9 +149,9 @@ button {
 }
 
 .loader {
-  border: 16px solid #f3f3f3;
+  border: 7px solid #f3f3f3;
   border-radius: 50%;
-  border-top: 16px solid blue;
+  border-top: 7px solid blue;
   width: 50px;
   height: 50px;
   -webkit-animation: spin 2s linear infinite;
