--- a/src/components/sharedcomponents/styles.css
+++ b/src/components/sharedcomponents/styles.css
@@ -149,17 +149,22 @@ button {
 }
 
 .loader {
-  border: 7px solid #f3f3f3;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid #f3f3f3;
   border-radius: 50%;
-  border-top: 7px solid blue;
-  width: 50px;
-  height: 50px;
+  border-top: 2px solid blue;
+  width: 7px;
+  height: 7px;
   -webkit-animation: spin 2s linear infinite;
   animation: spin 2s linear infinite;
-  margin-top: 200px;
+  margin-left: 20px;
+  margin-top: 3 px;
+  /* margin-top: 200px;
 
-  margin-left: auto;
-  margin-right: auto;
+  margin-left: 20px;
+  margin-right: auto; */
 }
 
 @-webkit-keyframes spin {
