--- a/src/routes/Dashboard/popUpstyles.css
+++ b/src/routes/Dashboard/popUpstyles.css
@@ -19,7 +19,7 @@ html {
 
 button {
   border-radius: 10px;
-  background-color: grey;
+  /* background-color: grey; */
   outline: none;
 }
 
@@ -34,12 +34,13 @@ button:hover {
   height: 100%;
   background-color: rgba(0, 0, 0, 0.25);
   bottom: 0px;
+  left: 0px;
 }
 
 .modal_content {
   background-color: white;
   position: absolute;
-  top: 20%;
+  top: 30%;
   left: 30%;
   width: 40%;
   padding: 20px;
@@ -50,8 +51,14 @@ button:hover {
 .close {
   color: Black;
   float: right;
+  /* text-align: right; */
 }
-
+.foldernameinput {
+  /* display: flex;
+  justify-content: center;
+  align-items: center; */
+  width: 90%;
+}
 .close:hover {
   color: cyan;
   cursor: pointer;
