--- a/src/routes/Dashboard/styles.css
+++ b/src/routes/Dashboard/styles.css
@@ -9,7 +9,10 @@
   display: flex;
   /* flex-wrap: wrap; */
   /* justify-content: space-between; */
-  height: 100vh;
+  /* height: 100vh; */
+}
+.spacing {
+  padding: 5px;
 }
 .top {
   display: flex;
@@ -49,7 +52,7 @@
 
 .left1 {
   display: flex;
-  width: 15%;
+  width: 20%;
   /* flex-direction: column; */
   background-color: white;
   display: none;
@@ -61,6 +64,11 @@
   }
   .right1 {
     width: 85%;
+  }
+}
+@media (min-width: 480px) {
+  .py-4 {
+    display: none;
   }
 }
 .right1 {
@@ -109,7 +117,7 @@
 }
 .mainright {
   display: flex;
-  width: 30%;
+  /* width: 30%; */
   justify-content: center;
   align-items: center;
   background-color: blue;
@@ -157,6 +165,7 @@ h3 {
   padding-left: 20px;
   margin-bottom: 0px;
   margin-top: 0px;
+  padding-top: 20px;
 }
 .maindown {
   display: flex;
@@ -204,7 +213,7 @@ h2 {
   align-items: center; */
   text-decoration: none;
   cursor: pointer;
-  padding: 10px;
+  /* padding: 10px; */
   /* padding: 20px; */
 }
 .underline {
@@ -222,7 +231,7 @@ h2 {
   /* border-bottom-width: 3.1px; */
   border-bottom-width: 3.1px;
   width: fit-content;
-  padding: 10px;
+  /* padding: 10px; */
 }
 .movelinkimageright {
   display: flex;
@@ -238,11 +247,11 @@ h2 {
   -moz-box-shadow: 2px 2px 3px #666;
   -webkit-box-shadow: 2px 2px 3px #666;
   box-shadow: 2px 2px 3px #666;
-  font-size: 20px;
+  font-size: 12px;
   padding: 4px 7px;
   outline: 0;
   -webkit-appearance: none;
-  width: 50vw;
+  width: 30vw;
   margin-left: 20px;
 }
 .shortrounded {
@@ -253,16 +262,27 @@ h2 {
   -moz-box-shadow: 2px 2px 3px #666;
   -webkit-box-shadow: 2px 2px 3px #666;
   box-shadow: 2px 2px 3px #666;
-  font-size: 20px;
+  font-size: 12px;
   padding: 4px 7px;
   outline: 0;
   -webkit-appearance: none;
-  /* width: 50vw; */
+  width: 15vw;
   margin-left: 20px;
 }
 .white {
   color: white;
   padding-left: 20px;
+}
+.whitebutton {
+  /* background-color: white; */
+  display: flex;
+  margin-top: 10;
+  background-color: white;
+  color: black;
+
+  float: right;
+  padding: 7px;
+  font-size: 12px;
 }
 .tdForQuickLink {
   height: 30px;
@@ -294,4 +314,397 @@ h2 {
   padding-left: 5px;
   height: 100px;
   border-radius: 12px;
+}
+
+/* ///////// */
+.duration-500 {
+  transition-duration: 0.5s;
+}
+.ease-in-out {
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.transition {
+  transition-property: background-color, border-color, color, fill, stroke,
+    opacity, box-shadow, -webkit-transform;
+  transition-property: background-color, border-color, color, fill, stroke,
+    opacity, box-shadow, transform;
+  transition-property: background-color, border-color, color, fill, stroke,
+    opacity, box-shadow, transform, -webkit-transform;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 0.15s;
+}
+.transform,
+.transform-gpu {
+  --tw-translate-x: 0;
+  --tw-translate-y: 0;
+  --tw-rotate: 0;
+  --tw-skew-x: 0;
+  --tw-skew-y: 0;
+  --tw-scale-x: 1;
+  --tw-scale-y: 1;
+}
+.transform {
+  -webkit-transform: translateX(var(--tw-translate-x))
+    translateY(var(--tw-translate-y)) rotate(var(--tw-rotate))
+    skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x))
+    scaleY(var(--tw-scale-y));
+  transform: translateX(var(--tw-translate-x)) translateY(var(--tw-translate-y))
+    rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y))
+    scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.z-20 {
+  z-index: 20;
+}
+.w-40 {
+  width: 10rem;
+}
+.inset-0 {
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+.fixed {
+  position: fixed;
+}
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+.overflow-y-auto {
+  /* overflow-y: auto; */
+}
+items-center {
+  align-items: center;
+}
+.w-full {
+  width: 100%;
+}
+
+.flex {
+  display: flex;
+}
+.h-full {
+  height: 100%;
+}
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
+.justify-around {
+  justify-content: space-around;
+}
+.items-center {
+  align-items: center;
+}
+.w-1\/2 {
+  width: 50%;
+}
+.flex {
+  display: flex;
+}
+.w-6\/7 {
+  width: 85%;
+}
+.p-3 {
+  padding: 0.75rem;
+}
+.bg-gray-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
+}
+.rounded-lg {
+  border-radius: 0.5rem;
+  box-sizing: border-box;
+  border: 0 solid;
+}
+.p-3 {
+  padding: 0.75rem;
+}
+.border-gray-200 {
+  --tw-border-opacity: 1;
+  border-color: rgba(229, 231, 235, var(--tw-border-opacity));
+}
+.border-solid {
+  border-style: solid;
+}
+.border-2 {
+  border-width: 2px;
+}
+.rounded-lg {
+  border-radius: 0.5rem;
+}
+.justify-center {
+  justify-content: center;
+}
+.items-center {
+  align-items: center;
+}
+.flex {
+  display: flex;
+}
+.border-r {
+  border-right-width: 1px;
+}
+.bg-layoutBackground {
+  --tw-bg-opacity: 1;
+  background-color: rgba(242, 244, 244, var(--tw-bg-opacity));
+}
+* {
+  --tw-ring-inset: var(--tw-empty, /*!*/ /*!*/);
+  --tw-ring-offset-width: 0px;
+  --tw-ring-offset-color: #fff;
+  --tw-ring-color: rgba(59, 130, 246, 0.5);
+  --tw-ring-offset-shadow: 0 0 transparent;
+  --tw-ring-shadow: 0 0 transparent;
+}
+.mt-4 {
+  margin-top: 1rem;
+}
+.ml-1 {
+  margin-left: 0.25rem;
+}
+.flex-col {
+  -webkit-flex-direction: column;
+  flex-direction: column;
+}
+.flex {
+  display: -webkit-flex;
+  display: flex;
+}
+.text-black {
+  --tw-text-opacity: 1;
+  color: rgba(0, 0, 0, var(--tw-text-opacity));
+}
+.font-black {
+  font-weight: 900;
+}
+a {
+  color: inherit;
+  text-decoration: inherit;
+}
+.space-y-3 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.75rem * (1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
+}
+.text-gray-500 {
+  --tw-text-opacity: 1;
+  color: rgba(107, 114, 128, var(--tw-text-opacity));
+}
+/* .Search {
+  width: 20px;
+  height: 20px;
+}
+.search-input {
+  width: 30px;
+  height: 10px;
+} */
+input.nosubmit {
+  border: 1px solid #555;
+  width: 110px;
+  /* width: 90px; */
+  /* width: 100%; */
+  padding: 9px 4px 9px 40px;
+  background: transparent
+    url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' class='bi bi-search' viewBox='0 0 16 16'%3E%3Cpath d='M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z'%3E%3C/path%3E%3C/svg%3E")
+    no-repeat 13px center;
+}
+.plusButton {
+  /* padding-left: 12px; */
+  padding-right: 12px;
+  padding-left: 12px;
+  background-color: rgba(0, 0, 0, 0);
+  color: rgb(106, 135, 230);
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  --tw-border-opacity: 1;
+  border-color: rgba(107, 133, 230, var(--tw-border-opacity));
+  border-style: solid;
+  border-width: 1px;
+  /* border-radius: 1.5rem; */
+  /* width: 100%; */
+  /* padding: 0; */
+  /* line-height: inherit; */
+  /* color: inherit; */
+  /* cursor: pointer; */
+  /* background-color: transparent; */
+  /* background-image: none; */
+  /* -webkit-appearance: button; */
+  /* text-transform: none; */
+  /* font-family: inherit; */
+  /* font-size: 100%; */
+  /* line-height: 1.15; */
+  /* margin: 0;
+  /* padding-bottom: 12px;
+  padding-top: 12px; */
+}
+.scrollinglist {
+  height: 360px;
+  overflow-y: scroll;
+}
+.cancel {
+  font-size: 24px;
+  margin-left: 120px;
+}
+.items-center {
+  align-items: center;
+}
+.w-full {
+  width: 100%;
+}
+.h-full {
+  height: 100%;
+}
+.flex {
+  display: flex;
+}
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
+.justify-around {
+  justify-content: space-around;
+}
+.items-center {
+  align-items: center;
+}
+.w-1\/2 {
+  width: 50%;
+}
+.flex {
+  display: flex;
+}
+.w-6\/7 {
+  width: 85%;
+}
+.rounded-xl {
+  border-radius: 0.75rem;
+}
+.w-full {
+  width: 100%;
+}
+.h-full {
+  height: 100%;
+}
+
+.border-solid {
+  border-style: solid;
+}
+.border-2 {
+  border-width: 2px;
+}
+.rounded-lg {
+  border-radius: 0.5rem;
+}
+.justify-center {
+  justify-content: center;
+}
+
+.items-center {
+  align-items: center;
+}
+.flex {
+  display: flex;
+}
+.p-3 {
+  padding: 0.75rem;
+}
+.border-gray-200 {
+  --tw-border-opacity: 1;
+  border-color: rgba(229, 231, 235, var(--tw-border-opacity));
+}
+.border-solid {
+  border-style: solid;
+}
+.border-2 {
+  border-width: 2px;
+}
+.rounded-lg {
+  border-radius: 0.5rem;
+}
+.justify-center {
+  justify-content: center;
+}
+.items-center {
+  align-items: center;
+}
+.justify-end {
+  justify-content: flex-end;
+}
+.items-center {
+  align-items: center;
+}
+.w-1\/2 {
+  width: 50%;
+}
+.flex {
+  display: flex;
+}
+.w-1\/4 {
+  width: 25%;
+}
+.rounded-xl {
+  border-radius: 0.75rem;
+}
+.w-full {
+  width: 100%;
+}
+.h-full {
+  height: 100%;
+}
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+.border-app-blue {
+  --tw-border-opacity: 1;
+  border-color: rgba(107, 133, 230, var(--tw-border-opacity));
+}
+.border-solid {
+  border-style: solid;
+}
+.border-2 {
+  border-width: 2px;
+}
+.rounded-3xl {
+  border-radius: 1.5rem;
+}
+.rounded-lg {
+  border-radius: 0.5rem;
+}
+.w-full {
+  width: 100%;
+}
+
+.bg-gray-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
+}
+.rounded-lg {
+  border-radius: 0.5rem;
+}
+.w-2\/3 {
+  width: 66.666667%;
+}
+.flex {
+  display: flex;
+}
+.ml-2 {
+  margin-left: 0.5rem;
+}
+*,
+:after,
+:before {
+  --tw-ring-inset: var(--tw-empty, /*!*/ /*!*/);
+  --tw-ring-offset-width: 0px;
+  --tw-ring-offset-color: #fff;
+  --tw-ring-color: rgba(59, 130, 246, 0.5);
+  --tw-ring-offset-shadow: 0 0 transparent;
+  --tw-ring-shadow: 0 0 transparent;
 }
